fixing alignment using %

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 .vl {
-    height: 100px;
+    height: 50px;
 }
 
 .sofiatxt {
@@ -45,17 +45,17 @@ a {
 
 #interests {
     display:inline-block;
-    margin-left: 100px;
-    
+    margin-left: 6%; 
 }
 
 #about {
     display:inline-block;
+    margin-right: 6%;
 }
 
 #social {
     display:inline-block;
-    margin-left: 100px;
+    margin-right: 2%;
 }
 
 .styledul {
